--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
     "react-scripts": "5.0.1",
     "typescript": "^5.3.3",
     "axios": "^1.6.2",
-    "ajv": "^8.12.0"
+    "ajv": "^8.12.0",
+    "ajv-keywords": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,10 +40,14 @@
     "@types/react-dom": "^18.2.18"
   },
   "resolutions": {
-    "ajv": "^8.12.0"
+    "ajv": "^8.12.0",
+    "fork-ts-checker-webpack-plugin/ajv": "^8.12.0"
   },
   "overrides": {
-    "ajv": "^8.12.0"
+    "ajv": "^8.12.0",
+    "fork-ts-checker-webpack-plugin": {
+      "ajv": "^8.12.0"
+    }
   }
 }
 
