--- a/client/package.json
+++ b/client/package.json
@@ -41,13 +41,18 @@
   },
   "resolutions": {
     "ajv": "^8.12.0",
-    "fork-ts-checker-webpack-plugin/ajv": "^8.12.0"
+    "**/ajv": "^8.12.0",
+    "**/ajv-keywords": "^5.1.0"
   },
   "overrides": {
     "ajv": "^8.12.0",
+    "ajv-keywords": "^5.1.0",
     "fork-ts-checker-webpack-plugin": {
-      "ajv": "^8.12.0"
-    }
+      "ajv": "^8.12.0",
+      "ajv-keywords": "^5.1.0"
+    },
+    "**/ajv": "^8.12.0",
+    "**/ajv-keywords": "^5.1.0"
   }
 }
 
