--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postinstall": "npm install ajv@^8.12.0 ajv-keywords@^5.1.0 --prefix node_modules/fork-ts-checker-webpack-plugin --no-save || true"
   },
   "eslintConfig": {
     "extends": [
