--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "postinstall": "npm install ajv@^8.12.0 ajv-keywords@^5.1.0 --prefix node_modules/fork-ts-checker-webpack-plugin --no-save || true"
+    "postinstall": "node fix-ajv.js || true"
   },
   "eslintConfig": {
     "extends": [
