--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,6 @@
     "build": "SKIP_PREFLIGHT_CHECK=true DISABLE_ESLINT_PLUGIN=true react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "postinstall": "node fix-ajv.js || true"
   },
   "eslintConfig": {
     "extends": [
@@ -38,20 +37,11 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.18",
-    "ajv": "^8.12.0",
-    "ajv-keywords": "^3.5.2"
-  },
-  "resolutions": {
-    "ajv": "^8.12.0"
+    "@types/react-dom": "^18.2.18"
   },
   "overrides": {
     "ajv": "^8.12.0",
-    "ajv-keywords": "^3.5.2",
-    "fork-ts-checker-webpack-plugin": {
-      "ajv": "^8.12.0",
-      "ajv-keywords": "^3.5.2"
-    }
+    "ajv-keywords": "^3.5.2"
   }
 }
 
