--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "start": "react-scripts start",
     "build": "SKIP_PREFLIGHT_CHECK=true DISABLE_ESLINT_PLUGIN=true react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postinstall": "node fix-dependencies.js || true"
   },
   "eslintConfig": {
     "extends": [
