--- a/server/src/env.example
+++ b/server/src/env.example
@@ -1,11 +1,13 @@
 PORT=3001
 OPENROUTER_API_KEY=your_openrouter_api_key_here
-REPLICATE_API_TOKEN=your_replicate_api_token_here
+AI_HORDE_API_KEY=your_ai_horde_api_key_here
+AI_HORDE_MODEL=Deliberate
 NODE_ENV=development
 DATABASE_PATH=./neon_threads.db
 APP_URL=http://localhost:3000
 
-# Note: REPLICATE_API_TOKEN is required for image generation
-# Get your token at https://replicate.com/account/api-tokens
-# The token should start with "r8_"
+# Note: AI_HORDE_API_KEY is optional but recommended for priority queue access
+# Get your API key at https://stablehorde.net/register
+# If not provided, anonymous access will be used (slower queue)
+# AI_HORDE_MODEL can be changed to other models like "Anything Diffusion", "Stable Diffusion 2.1", etc.
 
