--- a/client/package.json
+++ b/client/package.json
@@ -10,14 +10,13 @@
     "typescript": "^5.3.3",
     "axios": "^1.6.2",
     "ajv": "^8.12.0",
-    "ajv-keywords": "^3.5.2"
+    "ajv-keywords": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "postinstall": "node fix-ajv.js || true"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -45,10 +44,10 @@
   },
   "overrides": {
     "ajv": "^8.12.0",
-    "ajv-keywords": "^3.5.2",
+    "ajv-keywords": "^5.1.0",
     "fork-ts-checker-webpack-plugin": {
       "ajv": "^8.12.0",
-      "ajv-keywords": "^3.5.2"
+      "ajv-keywords": "^5.1.0"
     }
   }
 }
