--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^5.3.3",
-    "axios": "^1.6.2",
-    "ajv": "^8.12.0",
-    "ajv-keywords": "^5.1.0"
+    "axios": "^1.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,16 +37,9 @@
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18"
   },
-  "resolutions": {
-    "ajv": "^8.12.0"
-  },
   "overrides": {
-    "ajv": "^8.12.0",
-    "ajv-keywords": "^5.1.0",
-    "fork-ts-checker-webpack-plugin": {
-      "ajv": "^8.12.0",
-      "ajv-keywords": "^5.1.0"
-    }
+    "ajv": "^6.12.6",
+    "ajv-keywords": "^3.5.2"
   }
 }
 
