--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,9 @@
   "devDependencies": {
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18"
+  },
+  "overrides": {
+    "ajv": "^8.12.0"
   }
 }
 
