--- a/client/package.json
+++ b/client/package.json
@@ -38,7 +38,14 @@
     "@types/react-dom": "^18.2.18"
   },
   "overrides": {
-    "ajv": "^8.12.0"
+    "ajv": "^8.12.0",
+    "ajv-keywords": "^5.1.0",
+    "schema-utils": "^4.0.0",
+    "fork-ts-checker-webpack-plugin": {
+      "ajv": "^8.12.0",
+      "ajv-keywords": "^5.1.0",
+      "schema-utils": "^4.0.0"
+    }
   }
 }
 
