--- a/render.yaml
+++ b/render.yaml
@@ -27,8 +27,8 @@ services:
   - type: static
     name: neon-threads-client
     buildCommand: cd client && npm install --legacy-peer-deps && npm run build
-    publishPath: client/build
+    publishPath: client/dist
     envVars:
-      - key: REACT_APP_API_URL
+      - key: VITE_API_URL
         sync: false  # Set this to your backend URL after deployment
 
