--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     env: node
     region: oregon
     plan: free
-    buildCommand: cd server && npm install --legacy-peer-deps && npm run build
+    buildCommand: cd server && npm install --legacy-peer-deps && npx tsc && ls -la dist/ || (echo "Build failed" && exit 1)
     startCommand: cd server && npm start
     envVars:
       - key: NODE_ENV
