Use explicit node command in startCommand

--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,7 @@ services:
     region: oregon
     plan: free
     buildCommand: cd server && npm install --legacy-peer-deps && npx tsc && ls -la dist/ || (echo "Build failed" && exit 1)
-    startCommand: cd server && npm start
+    startCommand: cd server && node dist/index.js
     envVars:
       - key: NODE_ENV
         value: production
