--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     env: node
     region: oregon
     plan: free
-    buildCommand: cd server && npm install && npm run build
+    buildCommand: cd server && npm install && npm run build && test -f dist/index.js || (echo "Build failed - dist/index.js not found" && exit 1)
     startCommand: cd server && node dist/index.js
     envVars:
       - key: NODE_ENV
