Add user authentication with Render PostgreSQL database support
Backend:
- Add PostgreSQL support with SQLite fallback for development
- Add bcrypt, jsonwebtoken, and pg dependencies
- Create auth routes (register, login, get current user)
- Add JWT authentication middleware
- Protect character and story routes with authentication
- Update database.ts to support both SQLite and PostgreSQL
- Add parseJsonField helper for cross-database JSON handling
- Update user table schema with email, password_hash, username

Frontend:
- Add Login and Register components with cyberpunk styling
- Update App.tsx to handle authentication state
- Create authenticatedFetch utility for API calls
- Update all API calls to include JWT tokens
- Add logout functionality

Configuration:
- Update render.yaml with DATABASE_URL and JWT_SECRET env vars
- Add AUTHENTICATION_SETUP.md guide

All character and story operations now require authentication.
Users can only access their own characters.

--- a/render.yaml
+++ b/render.yaml
@@ -23,6 +23,10 @@ services:
         sync: false  # Set this after frontend is deployed
       - key: DATABASE_PATH
         value: /opt/render/project/src/neon_threads.db
+      - key: DATABASE_URL
+        sync: false  # Set this to your Render PostgreSQL database connection string
+      - key: JWT_SECRET
+        sync: false  # Set a strong random secret for JWT token signing
 
   # Frontend Static Site
   - type: static
