--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -31,4 +32,3 @@
     "typescript": "^5.3.3"
   }
 }
-
