--- a/server/src/env.example
+++ b/server/src/env.example
@@ -1,13 +1,14 @@
 PORT=3001
-OPENROUTER_API_KEY=your_openrouter_api_key_here
-AI_HORDE_API_KEY=your_ai_horde_api_key_here
-AI_HORDE_MODEL=Deliberate
+# Google Gemini API Key (used for both story generation and Imagen image generation)
+# Get your API key from: https://aistudio.google.com/app/apikey
+GEMINI_API_KEY=your_gemini_api_key_here
 NODE_ENV=development
 DATABASE_PATH=./neon_threads.db
 APP_URL=http://localhost:3000
 
-# Note: AI_HORDE_API_KEY is optional but recommended for priority queue access
-# Get your API key at https://stablehorde.net/register
-# If not provided, anonymous access will be used (slower queue)
-# AI_HORDE_MODEL can be changed to other models like "Anything Diffusion", "Stable Diffusion 2.1", etc.
+# Database Configuration (for PostgreSQL on Render)
+# DATABASE_URL will be automatically set by Render if using a PostgreSQL database
+# JWT_SECRET should be a random secure string for token signing
+DATABASE_URL=postgresql://user:password@host:port/database
+JWT_SECRET=your_jwt_secret_here
 
